<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETF Calculator</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="calculator_list_item">Calculator</string>
    <string name="calc_button_text">Calculate</string>
    <string name="section_1">Section 1</string>
    <string name="calculator">Calculator</string>
    <string name="calculate_button">Calculate</string>
    <string name="months_remaining">Months remaining</string>
    <string name="smartphone_toggle">Smartphone</string>
    <string name="carrier_selection_prompt">Select your carrier</string>
    <string name="early_termination_fee_label">Your early termination fee is approximately</string>
    <string name="contract_end_date_label">When does your contract end?</string>
    <string name="select_end_date">Select end date</string>
    <string name="etf_default_text">$0.00</string>
    <string name="my_devices_title">My Devices</string>
    <string name="title_activity_add_new_device">Add New Device</string>
    <string name="hello_world">Hello world!</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="ok">Ok</string>
    <string name="title_activity_add_device">AddDeviceActivity</string>

</resources>
