<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:weightSum="1">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carrier_spinner"
        android:spinnerMode="dialog"
        android:prompt="@string/carrier_selection_prompt"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/smartphone_toggle"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />

    <ToggleButton
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:id="@+id/smartphone_toggle"
        android:textOn=""
        android:textOff=""
        android:background="@drawable/button_android_phone_background"
        android:checked="false"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contract_end_date_label"
        android:id="@+id/contract_end_date_label"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_end_date"
        android:id="@+id/contract_end_date_button"
        android:src="@android:drawable/ic_menu_today"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:scaleType="center"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txt_contract_end_date"
        tools:text="6/6/14"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/early_termination_fee_label"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/etf_label"
        android:text="@string/etf_default_text"
        android:layout_margin="4dp" />
</LinearLayout>